--- a/docker-files/docker-compose-s3.yml
+++ b/docker-files/docker-compose-s3.yml
@@ -3,6 +3,7 @@ services:
     # image: minio/minio
     build:
       context: ../src/s3
+    restart: always
     ports:
       - "9000:9000"
       - "9001:9001"
