--- a/src/aws-api/Dockerfile
+++ b/src/aws-api/Dockerfile
@@ -17,7 +17,7 @@ COPY ./pyproject.toml ./*.py ./uv.lock ./console .
 
 # Sync the project into a new environment, asserting the lockfile is up to date
 WORKDIR /app
-RUN uv sync --locked
+RUN uv sync
 
 # Expose the API port (same as LocalStack)
 EXPOSE 4566
