add restore with deletion period

--- a/docker-files/docker-compose-ecr.yml
+++ b/docker-files/docker-compose-ecr.yml
@@ -20,6 +20,12 @@ services:
       LOG_LEVEL: WARNING
     networks:
       - localcloud
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80/v2"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
     depends_on:
       ecr:
         condition: service_healthy
