--- a/docker-files/docker-compose-lambda.yml
+++ b/docker-files/docker-compose-lambda.yml
@@ -8,7 +8,7 @@ services:
       - lambda-zip:/data/lambda-files/
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      # LOCALCLOUD_API_HOSTNAME: lambda
+      LOCALCLOUD_API_HOSTNAME: api
       STORAGE_PATH: /data
       LOG_LEVEL: DEBUG
     networks:
