--- a/src/aws-api/pyproject.toml
+++ b/src/aws-api/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "boto3>=1.42.15",
+    "cryptography>=43.0.0",
     "docker>=7.1.0",
     "flask>=3.1.2",
     "pika>=1.3.2",
